--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -6,17 +6,19 @@ on:
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
-env:
-  PYTHON_VERSION: 3.11.3
+
 jobs:
   build:
+    env:
+      PYTHON_VERSION: 3.11.3
+      
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4.1.1
-    - name: Set up Python ${{ PYTHON_VERSION }}
+    - name: Set up Python ${{env.PYTHON_VERSION}}
       uses: actions/setup-python@v5
       with:
-        python-version: ${{ PYTHON_VERSION }}
+        python-version: ${{env.PYTHON_VERSION}}
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
