--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,3 +26,7 @@ jobs:
     - name: Run Tests
       run: |
         python manage.py test
+    - name: Scan with SonarCloud
+      uses: SonarSource/sonarcloud-github-action@v2.1.1
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
