--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,3 +30,4 @@ jobs:
       uses: SonarSource/sonarcloud-github-action@v2.1.1
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
