ADD: Readme and dockerignore files

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,10 +3,12 @@ ENV PYTHONUNBUFFERED 1
 
 RUN apk update && apk upgrade
 RUN python -m pip install gunicorn
+
 COPY . /app
 WORKDIR /app
 RUN python -m pip install -r requirements.txt
 RUN python manage.py collectstatic --noinput
+RUN python manage.py makemigrations
 RUN python manage.py migrate
 
 EXPOSE 8000
