--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -58,6 +58,8 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2.0.1
+        with:
+          registry-type: public
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.1.0
