--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,7 @@
 FROM docker.io/library/python:3.11.3-alpine
 ENV PYTHONUNBUFFERED 1
 
-ENV DJANGO_DEBUG=True
+ENV DJANGO_DEBUG=False
 
 RUN apk update && apk upgrade
 RUN python -m pip install gunicorn
@@ -9,9 +9,6 @@ RUN python -m pip install gunicorn
 COPY . /app
 WORKDIR /app
 RUN python -m pip install -r requirements.txt
-RUN python manage.py collectstatic --noinput
-RUN python manage.py makemigrations
-RUN python manage.py migrate
 
 EXPOSE 8000
 
